--- a/Redis/4.Redis持久化/10纯缓存模式.md
+++ b/Redis/4.Redis持久化/10纯缓存模式.md
@@ -7,7 +7,7 @@
 
    禁用RDB持久化模式下，我们仍然可以使用命令save、bgsave生成RDB文件
 
-2. appendonly no  -- 禁用AOF
+2. 配置文件中修改`appendonly no`  -- 禁用AOF
 
    禁用AOF持久化模式下，我们仍然可以使用命令bgrewriteaof生成AOF文件
 
