--- a/Redis/8.Redis复制(replica)/2.案例演示-配置文件.md
+++ b/Redis/8.Redis复制(replica)/2.案例演示-配置文件.md
@@ -70,9 +70,6 @@ redis6379.conf为例，步骤如下：
 
     ![](images/11.配置appendfilename.jpg)
 
-11. $\textcolor{red}{从机访问主机的通行密码masterauth，必须配置}$
-
-    ![](images/12.从机配置主机密码.jpg)
-
-    **从机需要配置，主机不用**
-
+11. slave需要配置的相关配置
+    -  masterauth <master-password>下面添加 masterauth "M密码"
+    -  replicaof <masterip> <masterport>下面添加replicaof master的ip地址 master的端口好
