--- a/Redis/8.Redis复制(replica)/3.案例演示-常用3招.md
+++ b/Redis/8.Redis复制(replica)/3.案例演示-常用3招.md
@@ -2,7 +2,7 @@
 
 ### 一主二仆
 
-#### 方案1：配置文件固定写死主从关系
+#### 方式1：配置文件固定写死主从关系
 
 - 配置文件执行：replicaof 主库IP 主库端口
 
@@ -63,7 +63,7 @@
 
    A：可以，类似于从机切入点问题
 
-#### 方案2：命令操作手动主从关系指令
+#### 方式2：命令操作手动主从关系指令
 
 1. 从机停机去掉配置文件中的配置项，3台目前都是主机状态，各不从属
 
@@ -87,12 +87,12 @@
 
 ### 薪火相传
 
-- 上一个slave可以是下一个slave的master，slave同样可以接收其他slaves的连接和同步请求，那么该slave作为了链条中下一个的master,可以有效减轻主master的写压力
+- **上一个slave可以是下一个slave的master，slave同样可以接收其他slaves的连接和同步请求，那么该slave作为了链条中下一个的master,可以有效减轻主master的写压力**
 - 中途变更转向:会清除之前的数据，重新建立主从关系并拷贝最新的
 - slaveof 新主库IP 新主库端口
 
 ### 反客为主
 
-slaveof no one  使当前数据库停止与其他数据库的同步关系
+`slaveof no one`  使当前数据库停止与其他数据库的同步关系
 
 
