--- a/Redis/9.Redis哨兵(sentinel)/1.Redis哨兵基本介绍.md
+++ b/Redis/9.Redis哨兵(sentinel)/1.Redis哨兵基本介绍.md
@@ -2,7 +2,7 @@
 
 ### 是什么
 
-吹哨人巡查监控后台master主机是否故障，如果故障了根据$\textcolor{red}{投票数}$自动将某一个从库转换为新主库，继续对外服务
+吹哨人巡查监控后台master主机是否故障，如果故障了根据**投票数**自动将某一个从库转换为新主库，继续对外服务
 
 作用：俗称无人值守运维
 
