更新 2.sentinel配置参数说明.md

--- a/Redis/9.Redis哨兵(sentinel)/2.sentinel配置参数说明.md
+++ b/Redis/9.Redis哨兵(sentinel)/2.sentinel配置参数说明.md
@@ -9,7 +9,7 @@
 
 ### 操作步骤
 
-1. $\textcolor{red}{myredis目录下新建或者拷贝sentinel.conf文件按，名字绝对不能错}$
+1. **myredis目录下新建或者拷贝sentinel.conf文件按，名字绝对不能错**
 
 2. 先看看/opt目录下默认的sentinel.conf文件的内容
 
