更新 3.sentinel通用配置及主从复制.md

--- a/Redis/9.Redis哨兵(sentinel)/3.sentinel通用配置及主从复制.md
+++ b/Redis/9.Redis哨兵(sentinel)/3.sentinel通用配置及主从复制.md
@@ -25,7 +25,7 @@
 
   ![](images/10.主机配置master访问密码.png)
 
-  6379后续可能会变成从机，需要设置访问新主机的密码，所以此处会设置masterauth，**不然后续可能会报错 master_link_status:down**
+  6379后续经过哨兵选举可能会变成从机，需要设置访问新主机的密码，所以此处会设置masterauth，**不然后续可能会报错 master_link_status:down**
 
 - 3台不同的虚拟机实例，启动三台真是机器实例并连接
 
